# CloudForest

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug-with-known-reason.md  bug-with-unknown-reason.md
UI/: EditArea.css  EditArea.ui  EditAreaHolder.ui  FPFolderButton.ui  FilePanel.css  FilePanel.ui  HeaderBar.css  HeaderBar.ui  MainWindow.css  MainWindow.ui  SettingPanel.ui
data/: languages.json
data/extension/: enabled.json  init.py
data/setting/: .gitignore  extension-default.json  language.json  setting.json
data/syntax/: c.txt  cpp.txt  js.txt  lua.txt  rust.txt
data/ui/: EditArea.ui  FPFolderButton.ui  FilePanel.ui  HeaderBar.ui  MainWindow.ui  SettingPanel.ui  TextArea.ui
datas/: DefaultSettings.txt
datatypes/: README.md  common.h  extension.h  file.h  language.h  language_data.h  lsp.h
doc/: CloudForest introduction.md  Code.md
doc/.obsidian/: graph.json  workspace.json
doc/Source codes/: EditArea.md  FilePanel.md  HeaderBar.md  MainWindow.md  SettingPanel.md
extension/: ClangdClient.py  CloudForestPy.py  LSPClient.py  TypescriptClient.py  extension.py  init.py  testlsp.py
extension/CloudForestBuiltIn/: JsonParser.py  LSPClientClass.py  LSPMsg.py
extension/CloudForestPy/: EditArea.py  EditAreaMod.py  __init__.py  cfPymodFunctions.py
extension/LSP/: LSPClient.py  LSPMessages.py
gres/: appsettings.gschema.xml  ui.gresource.xml
pythonbackend/: CMakeLists.txt  EventTemplate.md  README.md  cloudforest_mod_Py.cpp  cloudforest_mod_Py.h  language_mod_Py.cpp  language_mod_Py.h  python_if.cpp  python_if.h  python_tool.cpp  python_tool.h  setting_mod_Py.cpp  setting_mod_Py.h
pythonbackend/editarea/: editarea_class_Py.cpp  editarea_class_Py.h  editarea_mod_Py.cpp  editarea_mod_Py.h
pythonbackend/filemanagement/: file_panel_mod_Py.h
pythonbackend/headerbar/: headerbar_mod_Py.h
pythonbackend/python/: README.md
pythonbackend/python/cloudforest/editarea/: __init__.py  editarea_class.py
pythonbackend/python/cloudforest/language/: __init__.py
pythonbackend/settingpanel/: setting_panel_mod_Py.cpp  setting_panel_mod_Py.h
pythonscripts/: README.md  entry.py  event.py  extension_loader.py  init.py  initializer.py
pythonscripts/editarea/: __init__.py
pythonscripts/lsp/: lsp_msg.py  (+4 more)
quickstart/: README.md  note.md
src/: App.h  AssetManager.c  AssetManager.cpp  AssetManager.h  CMakeLists.txt  Classes.cpp  Classes.h  Core.cpp  Core.h  CssLoader.c  CssLoader.cpp  CssLoader.h  DataTypes.cpp  DataTypes.h  EditArea.c  EditArea.cpp  EditArea.h  Entry.c  Entry.cpp  FileManager.c  FileManager.cpp  FileManager.h  FilePanel.cpp  FilePanel.h  Global.cpp  Global.h  HeaderBar.c  HeaderBar.cpp  HeaderBar.h  MainWindow.c  MainWindow.cpp  MainWindow.h  README.md  SectionData.cpp  SectionData.h  Session.cpp  Session.h  Setting.cpp  Setting.h  SettingPanel.cpp  (+7 more)
src/JSBackend/: NodeEmbed.cpp  NodeEmbed.h
src/PythonBackend/: PythonMain.cpp  PythonMain.h  cfEditArea.cpp  cfEditArea.h  cfModule.cpp  cfModule.h  cfPythonTool.cpp  cfPythonTool.h  pyCFModule.cpp  pyCFModule.h  pyEditArea.cpp  pyEditArea.h
src/cf/: CFCore.cpp  CFCore.h  CFEmbed.h
src/filemanagement/: CMakeLists.txt  FileCallback.cpp  FileCallback.h  FileManagement_if.cpp  FileManagement_if.h  FileOperation.cpp  FileOperation.h  FileReader.cpp  FileReader.h  FileTree.cpp  FileTree.h  README.md
src/gui/: AppUI.h  CFGrid.cpp  CFGrid.h  CFLayout.cpp  CFLayout.h  CFPopover.cpp  CFPopover.h  CMakeLists.txt  EditArea.cpp  EditArea.h  FilePanel.cpp  FilePanel.h  Gui_if.cpp  Gui_if.h  HeaderBar.cpp  HeaderBar.h  MainWindow.cpp  MainWindow.h  README.md  SearchReplaceDialog.cpp  SearchReplaceDialog.h  SettingPanel.cpp  SettingPanel.h  Style.cpp  Style.h  guiCore.cpp  guiCore.h
src/gui/components/: CfComponent.h  CfContent.cpp  CfContent.h  Flyout.cpp  Flyout.h  TextArea.cpp  TextArea.h  ToggleBlock.cpp  ToggleBlock.h
src/gui/editarea/: CompletionPopover.cpp  CompletionPopover.h  CompletionTool.cpp  CompletionTool.h  DiagnosticPanel.cpp  DiagnosticPanel.h  DiagnosticTool.cpp  DiagnosticTool.h  EditArea.cpp  EditArea.h  EditArea_if.cpp  EditArea_if.h  LangPanel.cpp  LangPanel.h  LspPopovers.cpp  LspPopovers.h  LspPopovers_if.cpp  LspPopovers_if.h  Popovers.cpp  Popovers.h  README.md  SearchReplaceDialog.cpp  SearchReplaceDialog.h
src/gui/filepanel/: FilePanel.cpp  FilePanel.h  FilePanelButtons.cpp  FilePanelButtons.h  FilePanel_if.cpp  FilePanel_if.h
src/gui/headerbar/: Headerbar.cpp  Headerbar.h
src/gui/layouts/layout/: CfLayout.cpp  CfLayout.h
src/gui/layouts/tab/: CfTabLayout.cpp  CfTabLayout.h  CfTabSwitcher.cpp  CfTabSwitcher.h  CfTab_if.cpp  CfTab_if.h
src/gui/settingpanel/: ExtensionPage.cpp  ExtensionPage.h  SettingPage.cpp  SettingPage.h  SettingPanel.cpp  SettingPanel.h  SettingPanel_if.cpp  SettingPanel_if.h
src/gui/style/: Style.cpp  Style.h
src/gui/windows/: MainWindow.cpp  MainWindow.h  MainWindow_if.cpp  MainWindow_if.h  Window.cpp  Window.h
src/languages/: CMakeLists.txt  LanguageGroup.cpp  LanguageGroup.h  LanguageListener.cpp  LanguageListener.h  LanguageManager_if.cpp  LanguageManager_if.h
src/lsp/: LSP.cpp  LSP.h  lsp.h  test.cpp
src/requests/: BaseRequest.h  CFRequests.h  FileRequests.h  GUIRequests.h  PyRequests.cpp  PyRequests.h
src/session/: CMakeLists.txt  EditAreaData.cpp  EditAreaData.h  FileData.cpp  FileData.h  README.md  SessionEvent.cpp  SessionEvent.h  TabData.cpp  TabData.h
src/tools/: Json.cpp
styles/: AppStyle.css  DefaultDarkTheme.css  DefaultLightTheme.css  DefaultTheme.css  EditArea.css  FilePanel.css  HeaderBar.css  MainWindow.css
syntax/: cpp.txt  css.txt  demo.txt  js.txt  py.txt  test.txt
syntaxhighlight/: cpp.txt
toolset/: CMakeLists.txt
toolset/codingassist/: CodingAssist.h
toolset/event/: Event.cpp  Event.h  README.md
toolset/syntaxprovider/: CFCore.cpp  CFCore.h  CFEmbed.h  syntax_provider.cpp  syntax_provider.h
toolset/tools/: Json.h  StringSorting.cpp  StringSorting.h  Tool.cpp  Tool.h  text_tool.cpp  text_tool.h
ui/: EditArea.ui  EditAreaHolder.ui  FilePanel.ui  MainWindow.ui
(+66 files in other folders)
